add a note about pan and zoom in the GUI window.

--- a/plugin/xlib/vimdot.1
+++ b/plugin/xlib/vimdot.1
@@ -13,6 +13,8 @@ in the editor.
 .PP
 If no filename is given, vimdot will use 'noname.dot' and initialise it with an example graph to get you
 started.
+.PP
+The GUI window (provided by "dot -Txlib") supports zooming using the mouse scroll-wheel, and panning by holding the scroll-wheel down and dragging.
 .SH SEE ALSO
 .br
 vim(1), dot(1)
