--- a/lib/cdt/cdt.3
+++ b/lib/cdt/cdt.3
@@ -1,3 +1,4 @@
+.fp 5 CW
 .TH LIBCDT 3
 .SH NAME
 \fBCdt\fR \- container data types
@@ -22,7 +23,7 @@
 ..
 .ta 1.0i 2.0i 3.0i 4.0i 5.0i
 .Cs
-#include <graphviz/cdt.h>
+#include <cdt.h>
 .Ce
 .Ss "DICTIONARY TYPES"
 .Cs
@@ -35,12 +36,13 @@ Dtstat_t;
 .Ce
 .Ss "DICTIONARY CONTROL"
 .Cs
-Dt_t*       dtopen(Dtdisc_t* disc, Dtmethod_t* meth);
+Dt_t*       dtopen(const Dtdisc_t* disc, const Dtmethod_t* meth);
 int         dtclose(Dt_t* dt);
 void        dtclear(dt);
-Dtmethod_t* dtmethod(Dt_t* dt, Dtmethod_t* meth);
-Dtdisc_t*   dtdisc(Dt_t* dt, Dtdisc_t* disc, int type);
+Dtmethod_t* dtmethod(Dt_t* dt, const Dtmethod_t* meth);
+Dtdisc_t*   dtdisc(Dt_t* dt, const Dtdisc_t* disc, int type);
 Dt_t*       dtview(Dt_t* dt, Dt_t* view);
+int         dttreeset(Dt_t* dt, int minp, int balance);
 .Ce
 .Ss "STORAGE METHODS"
 .Cs
@@ -51,9 +53,12 @@ Dtmethod_t* Dtobag;
 Dtmethod_t* Dtlist;
 Dtmethod_t* Dtstack;
 Dtmethod_t* Dtqueue;
+Dtmethod_t* Dtdeque;
 .Ce
 .Ss "DISCIPLINE"
 .Cs
+#define DTOFFSET(struct_s,member)
+#define DTDISC(disc,key,size,link,makef,freef,comparf,hashf,memoryf,eventf)
 typedef Void_t*      (*Dtmake_f)(Dt_t*, Void_t*, Dtdisc_t*);
 typedef void         (*Dtfree_f)(Dt_t*, Void_t*, Dtdisc_t*);
 typedef int          (*Dtcompar_f)(Dt_t*, Void_t*, Void_t*, Dtdisc_t*);
@@ -64,7 +69,10 @@ typedef int          (*Dtevent_f)(Dt_t*, int, Void_t*, Dtdisc_t*);
 .Ss "OBJECT OPERATIONS"
 .Cs
 Void_t*   dtinsert(Dt_t* dt, Void_t* obj);
+Void_t*   dtappend(Dt_t* dt, Void_t* obj);
 Void_t*   dtdelete(Dt_t* dt, Void_t* obj);
+Void_t*   dtattach(Dt_t* dt, Void_t* obj);
+Void_t*   dtdetach(Dt_t* dt, Void_t* obj);
 Void_t*   dtsearch(Dt_t* dt, Void_t* obj);
 Void_t*   dtmatch(Dt_t* dt, Void_t* key);
 Void_t*   dtfirst(Dt_t* dt);
@@ -79,6 +87,9 @@ Dtlink_t* dtlink(Dt_t*, Dtlink_t* link);
 Void_t*   dtobj(Dt_t* dt, Dtlink_t* link);
 Dtlink_t* dtextract(Dt_t* dt);
 int       dtrestore(Dt_t* dt, Dtlink_t* link);
+
+#define   DTTREESEARCH(Dt_t* dt, Void_t* obj, action)
+#define   DTTREEMATCH(Dt_t* dt, Void_t* key, action)
 .Ce
 .Ss "DICTIONARY STATUS"
 .Cs
@@ -123,31 +134,33 @@ This is the type of a structure to return dictionary statistics (see \f5dtstat()
 .PP
 .Ss "DICTIONARY CONTROL"
 .PP
-.Ss "  Dt_t* dtopen(Dtdisc_t* disc, Dtmethod_t* meth)"
+.Ss "  Dt_t* dtopen(const Dtdisc_t* disc, const Dtmethod_t* meth)"
 This creates a new dictionary.
 \f5disc\fP is a discipline structure to describe object format.
 \f5meth\fP specifies a manipulation method.
 \f5dtopen()\fP returns the new dictionary or \f5NULL\fP on error.
+See also the events \f5DT_OPEN\fP and \f5DT_ENDOPEN\fP below.
 .PP
 .Ss "  int dtclose(Dt_t* dt)"
 This deletes \f5dt\fP and its objects.
 Note that \f5dtclose()\fP fails if \f5dt\fP is being viewed by
 some other dictionaries (see \f5dtview()\fP).
 \f5dtclose()\fP returns \f50\fP on success and \f5-1\fP on error.
+See also the events \f5DT_CLOSE\fP and \f5DT_ENDCLOSE\fP below.
 .PP
 .Ss "  void dtclear(Dt_t* dt)"
 This deletes all objects in \f5dt\fP without closing \f5dt\fP.
 .PP
-.Ss "  Dtmethod_t dtmethod(Dt_t* dt, Dtmethod_t* meth)"
+.Ss "  Dtmethod_t dtmethod(Dt_t* dt, const Dtmethod_t* meth)"
 If \f5meth\fP is \f5NULL\fP, \f5dtmethod()\fP returns the current method.
 Otherwise, it changes the storage method of \f5dt\fP to \f5meth\fP.
 Object order remains the same during a
-method switch among \f5Dtlist\fP, \f5Dtstack\fP and \f5Dtqueue\fP.
+method switch among \f5Dtlist\fP, \f5Dtstack\fP, \f5Dtqueue\fP and \f5Dtdeque\fP.
 Switching to and from \f5Dtset/Dtbag\fP and \f5Dtoset/Dtobag\fP may cause
 objects to be rehashed, reordered, or removed as the case requires.
 \f5dtmethod()\fP returns the previous method or \f5NULL\fP on error.
 .PP
-.Ss "  Dtdisc_t* dtdisc(Dt_t* dt, Dtdisc_t* disc, int type)"
+.Ss "  Dtdisc_t* dtdisc(Dt_t* dt, const Dtdisc_t* disc, int type)"
 If \f5disc\fP is \f5NULL\fP, \f5dtdisc()\fP returns the current discipline.
 Otherwise, it changes the discipline of \f5dt\fP to \f5disc\fP.
 Objects may be rehashed, reordered, or removed as appropriate.
@@ -166,10 +179,24 @@ Then, if \f5view\fP is \f5NULL\fP, \f5dtview\fP returns the terminated view dict
 If \f5view\fP is not \f5NULL\fP, a viewpath from \f5dt\fP to \f5view\fP is established.
 \f5dtview()\fP returns \f5dt\fP on success and \f5NULL\fP on error.
 .PP
-If two dictionaries on the same viewpath have the same values for the discipline fields
-\f5Dtdisc_t.link\fP, \f5Dtdisc_t.key\fP, \f5Dtdisc_t.size\fP, and \f5Dtdisc_t.hashf\fP,
-it is expected that key hashing will be the same.
-If not, undefined behaviors may result during a search or a walk.
+It is an error to have dictionaries on a viewpath with different storage methods.
+In addition, dictionaries on the same view path should
+treat objects in a consistent manner with respect to comparison or hashing.
+If not, undefined behaviors may result.
+.PP
+.Ss "  int dttreeset(Dt_t* dt, int minp, int balance)"
+This function only applies to dictionaries operated under the method \f5Dtoset\fP
+which uses top-down splay trees (see below). It returns 0 on success and -1 on error.
+.Tp
+\f5minp\fP:
+This parameter defines the minimum path length before a search path is adjusted.
+For example, \f5minp\fP equal 0 would mean that search paths are always adjusted.
+If \f5minp\fP is negative, the minimum search path is internally computed based
+on a function of the current dictionary size. This computed value is such that
+if the tree is balanced, it will never require adjusting.
+.Tp
+\f5balance\fP:
+If this is non-zero, the tree will be made balanced.
 .PP
 .Ss "STORAGE METHODS"
 .PP
@@ -188,12 +215,23 @@ Objects are unordered.
 \f5Dtset\fP keeps unique objects.
 \f5Dtbag\fP allows repeatable objects and always keeps them together
 (note the effect on dictionary walking.)
+These methods use a hash table with chaining to manage the objects.
+See also the event \f5DT_HASHSIZE\fP below on how to manage hash table
+resizing when objects are inserted.
 .PP
 .Ss "  Dtlist"
 Objects are kept in a list.
-New objects are inserted either
-in front of \fIcurrent object\fP (see \f5dtfinger()\fP) if this is defined
-or at list front if there is no current object.
+The call \f5dtinsert()\fP inserts a new object
+in front of \fIthe current object\fP (see \f5dtfinger()\fP) if it is defined
+or at list front if no current object is defined.
+Similarly, the call \f5dtappend()\fP appends a new object
+after \fIthe current object\fP (see \f5dtfinger()\fP) if it is defined
+or at list end if no current object is defined.
+.PP
+.Ss "  Dtdeque"
+Objects are kept in a deque. This is similar to \f5Dtlist\fP
+except that objects are always inserted at the front and appended at the tail
+of the list.
 .PP
 .Ss "  Dtstack"
 Objects are kept in a stack, i.e., in reverse order of insertion.
@@ -240,7 +278,7 @@ i.e., at address \f5(Dtlink_t*)((char*)obj+link)\fP.
 .PP
 .Ss "  Void_t* (*makef)(Dt_t* dt, Void_t* obj, Dtdisc_t* disc)"
 If \f5makef\fP is not \f5NULL\fP,
-\f5dtinsert(dt,obj)\fP will call it
+\f5dtinsert(dt,obj)\fP or \f5dtappend()\fP will call it
 to make a copy of \f5obj\fP suitable for insertion into \f5dt\fP.
 If \f5makef\fP is \f5NULL\fP, \f5obj\fP itself will be inserted into \f5dt\fP.
 .PP
@@ -272,28 +310,48 @@ If \f5addr\fP is not \f5NULL\fP and \f5size\fP is zero, \f5addr\fP is to be free
 If \f5addr\fP is not \f5NULL\fP and \f5size\fP is positive,
 \f5addr\fP is to be resized to the given size.
 If \f5memoryf\fP is \f5NULL\fP, \fImalloc(3)\fP is used.
-When dictionaries share memory,
-a record of the first allocated memory segment should be kept
-so that it can be used to initialize new dictionaries (see below.)
 .PP
 .Ss "  int (*eventf)(Dt_t* dt, int type, Void_t* data, Dtdisc_t* disc)"
 If not \f5NULL\fP, \f5eventf\fP announces various events.
-If it returns a negative value, the calling operation will terminate with failure.
-Unless noted otherwise, a non-negative return value let the
-calling function proceed normally. Following are the events:
+Each event may have particular handling of the return values from \f5eventf\fP.
+But a negative return value typically means failure.
+Following are the events:
 .Tp
 \f5DT_OPEN\fP:
 \f5dt\fP is being opened.
-If \f5eventf\fP returns zero, the opening process proceeds normally.
-A positive return value indicates that \f5dt\fP
-uses memory already initialized by a different dictionary.
-In that case, \f5*(Void_t**)data\fP should be set to
-the first allocated memory segment as discussed in \f5memoryf\fP.
-\f5dtopen()\fP may fail if this segment is not returned or
-if it has not been properly initialized.
+If \f5eventf\fP returns negative, the opening process terminates with failure.
+If \f5eventf\fP returns zero, the opening process proceeds in a default manner.
+A positive return value indicates special treatment of memory as follows.
+If \f5*(Void_t**)data\fP is set to point to some memory segment
+as discussed in \f5memoryf\fP, that segment of memory is used to start
+the dictionary. If \f5*(Void_t**)data\fP is \f5NULL\fP, 
+all memory including that of the dictionary handle itself
+will be allocated via \f5memoryf\fP.
+.Tp
+\f5DT_ENDOPEN\fP:
+This event announces that \f5dtopen()\fP has successfully opened
+a dictionary and is about to return. The \f5data\fP argument of
+\f5eventf\fP should be the new dictionary handle itself.
 .Tp
 \f5DT_CLOSE\fP:
-\f5dt\fP is being closed.
+\f5dt\fP is about to be closed. If \f5eventf\fP returns negative,
+the closing process stops immediately and \f5dtclose()\fP returns -1.
+Objects in the dictionary are deleted only if \f5eventf\fP returns zero.
+The dictionary handle itself is processed as follows.
+If it was allocated via \f5malloc()\fP, it will be freed.
+If it was allocated via \f5memoryf\fP (see \f5dtopen()\fP) and \f5eventf\fP
+returns 0, a call to \f5memoryf\fP will be issued to attempt freeing the handle.
+Otherwise, nothing will be done to its memory.
+
+As should be clear from their description,
+the events \f5DT_OPEN\fP and \f5DT_CLOSE\fP are designed to be used along
+with \f5memoryf\fP to manage the allocation and deallocation of dictionary and
+object memory across dictionaries. In fact, they can be used to manage
+dictionaries based on shared and/or persistent memory.
+.Tp
+\f5DT_ENDCLOSE\fP:
+This event announces that \f5dtclose()\fP has successfully closed
+a dictionary and is about to return.
 .Tp
 \f5DT_DISC\fP:
 The discipline of \f5dt\fP is being changed to a new one given in
@@ -302,26 +360,63 @@ The discipline of \f5dt\fP is being changed to a new one given in
 \f5DT_METH\fP:
 The method of \f5dt\fP is being changed to a new one given in
 \f5(Dtmethod_t*)data\fP.
+.Tp
+\f5DT_HASHSIZE\fP:
+The hash table (for \f5Dtset\fP and \f5Dtbag\fP) is being resized.
+In this case, \f5*(int*)data\fP has the current size of the table.
+The application can set the new table size by first changing
+\f5*(int*)data\fP to the desired size, then return a positive value.
+The application can also fix the table size at the current value
+forever by setting \f5*(int*)data\fP to a negative value, then
+again return a positive value. A non-positive return value from
+the event handling function means that Cdt will be responsible
+for choosing the hash table size.
+.PP
+.Ss "#define DTOFFSET(struct_s,member)"
+This macro function computes the offset of \f5member\fP from the start
+of structure \f5struct_s\fP. It is useful for getting the offset of
+a \f5Dtlink_t\fP embedded inside an object.
+.PP
+.Ss "#define DTDISC(disc,key,size,link,makef,freef,comparf,hashf,memoryf,eventf)"
+This macro function initializes the discipline pointed to by \f5disc\fP
+with the given values.
 .PP
 .Ss "OBJECT OPERATIONS"
 .PP
 .Ss "  Void_t* dtinsert(Dt_t* dt, Void_t* obj)"
-This inserts an object prototyped by \f5obj\fP into \f5dt\fP.
+.Ss "  Void_t* dtappend(Dt_t* dt, Void_t* obj)"
+These functions add an object prototyped by \f5obj\fP into \f5dt\fP.
+\f5dtinsert()\fP and \f5dtappend()\fP perform the same function
+for all methods except for \f5Dtlist\fP. See \f5Dtlist\fP for details.
 If there is an existing object in \f5dt\fP matching \f5obj\fP
 and the storage method is \f5Dtset\fP or \f5Dtoset\fP,
-\f5dtinsert()\fP will simply return the matching object.
+\f5dtinsert()\fP and \f5dtappend()\fP will simply return the matching object.
 Otherwise, a new object is inserted according to the method in use.
 See \f5Dtdisc_t.makef\fP for object construction.
-\f5dtinsert()\fP returns the new object, a matching object as noted,
-or \f5NULL\fP on error.
+The new object or a matching object as noted will be returned on success
+while \f5NULL\fP is returned on error.
 .PP
 .Ss "  Void_t* dtdelete(Dt_t* dt, Void_t* obj)"
-If \f5obj\fP is not \f5NULL\fP, the first object matching it is deleted.
 If \f5obj\fP is \f5NULL\fP, methods \f5Dtstack\fP and \f5Dtqueue\fP
 delete respectively stack top or queue head while other methods do nothing.
+If \f5obj\fP is not \f5NULL\fP, there are two cases.
+If the method in use is not \f5Dtbag\fP or \f5Dtobag\fP,
+the first object matching \f5obj\fP is deleted.
+On the other hand, if the method in use is \f5Dtbag\fP or \f5Dtobag\fP,
+the library check to see if \f5obj\fP is in the dictionary and delete it.
+If \f5obj\fP is not in the dictionary, some object matching it will be deleted.
 See \f5Dtdisc_t.freef\fP for object destruction.
 \f5dtdelete()\fP returns the deleted object (even if it was deallocated)
 or \f5NULL\fP on error.
+.PP
+.Ss "  Void_t* dtattach(Dt_t* dt, Void_t* obj)"
+This function is similar to \f5dtinsert()\fP but \f5obj\fP itself
+will be inserted into \f5dt\fP even if a discipline
+function \f5makef\fP is defined.
+.PP
+.Ss "  Void_t* dtdetach(Dt_t* dt, Void_t* obj)"
+This function is similar to \f5dtdelete()\fP but the object to be deleted
+from \f5dt\fP will not be freed (via the discipline \f5freef\fP function).
 .PP
 .Ss "  Void_t* dtsearch(Dt_t* dt, Void_t* obj)"
 .Ss "  Void_t* dtmatch(Dt_t* dt, Void_t* key)"
@@ -340,18 +435,21 @@ For \f5Dtstack\fP, objects are ordered in reverse order of insertion.
 For \f5Dtqueue\fP, objects are ordered in order of insertion.
 For \f5Dtlist\fP, objects are ordered by list position.
 For \f5Dtset\fP and \f5Dtbag\fP,
-objects use some internal ordering which
-may change on any search, insert, or delete operations.
-Therefore, these operations should not be used
-during a walk on a dictionary using either \f5Dtset\fP or \f5Dtbag\fP.
-.PP
-Objects in a dictionary or a viewpath can be walked using 
+objects are ordered by some internal order (more below).
+Thus, objects in a dictionary or a viewpath can be walked using 
 a \f5for(;;)\fP loop as below.
-Note that only one loop can be used at a time per dictionary.
-Concurrent or nested loops may result in unexpected behaviors.
 .Cs
     for(obj = dtfirst(dt); obj; obj = dtnext(dt,obj))
 .Ce
+When a dictionary uses \f5Dtset\fP or \f5Dtbag\fP,
+the object order is determined upon a call to \f5dtfirst()\fP/\f5dtlast()\fP.
+This order is frozen until a call \f5dtnext()\fP/\f5dtprev()\fP returns \f5NULL\fP
+or when these same functions are called with a \f5NULL\fP object argument.
+It is important that a \f5dtfirst()/dtlast()\fP call be
+balanced by a \f5dtnext()/dtprev()\fP call as described.
+Nested loops will require multiple balancing, once per loop.
+If loop balancing is not done carefully, either performance is degraded
+or unexpected behaviors may result.
 .Ss "  Void_t* dtlast(Dt_t* dt)"
 .Ss "  Void_t* dtprev(Dt_t* dt, Void_t* obj)"
 \f5dtlast()\fP and \f5dtprev()\fP are like \f5dtfirst()\fP and \f5dtnext()\fP
@@ -396,7 +494,7 @@ Objects in \f5dt\fP are made into a linked list and walked as follows:
 Note that \f5dtflatten()\fP returns a list of type \f5Dtlink_t*\fP,
 not \f5Void_t*\fP. That is, it returns a dictionary holder pointer,
 not a user object pointer
-(although both are the same if the discipline field \f5link\fP is non-negative.)
+(although both are the same if the discipline field \f5link\fP is zero.)
 The macro function \f5dtlink()\fP
 returns the dictionary holder object following \f5link\fP.
 The macro function \f5dtobj(dt,link)\fP
@@ -413,9 +511,36 @@ objects previously obtained via \f5dtextract()\fP.
 These functions can be used
 to share a same \f5dt\fP handle among many sets of objects.
 They are useful to reduce dictionary overhead
-in an application that creates concurrently many dictionaries.
+in an application that creates many concurrent dictionaries.
 It is important that the same discipline and method are in use at both
 extraction and restoration. Otherwise, undefined behaviors may result.
+.PP
+.Ss "  #define   DTTREESEARCH(Dt_t* dt, Void_t* obj, action)"
+.Ss "  #define   DTTREEMATCH(Dt_t* dt, Void_t* key, action)"
+These macro functions are analogues of \f5dtsearch()\fP and \f5dtmatch()\fP
+but they can only be used on a dictionary based on a binary
+search tree, i.e., \f5Dtoset\fP or \f5Dtobag\fP.
+.Tp
+\f5obj\fP or \f5key\fP:
+These are used to find a matching object. If there is no match,
+the result is \f5NULL\fP.
+.Tp
+\f5action\fP:
+The matching object \f5o\fP (which may be \f5NULL\fP) will be processed as follow:
+
+.Cs
+    action (o);
+.Ce
+
+Since \f5action\fP is used verbatim, it can be any C code
+fragment combinable with \f5(o)\fP to form a syntactically correct C statement.
+For example, suppose that the matching object is an integer, the below code
+accumulates the integer value in a variable \f5total\fP:
+
+.Cs
+    DTTREEMATCH(dt, key, total += (int));
+.Ce
+
 .PP
 .Ss "DICTIONARY INFORMATION"
 .PP
