*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+February 15, 2010
+	- migrated to 2005 version of cdt 
 January 26, 2010
 	- Release 2.26.3
 	- libcgraph.so   version bumped from 4 to 5 due to API changes
