fix complaint about "missing font 'p'"

--- a/cmd/tools/mm2gv.1
+++ b/cmd/tools/mm2gv.1
@@ -23,7 +23,7 @@ The following options are supported:
 This flag causes \fBmm2gv\fP to assign colors to the edges. The matrix element is scaled to the
 range [0,1] depending on where it lies between the minimum and maximum set matrix values. This
 scaled value is used as the \fI"wt"\fP attribute of the corresponding edge. 
-In addition, this scalar value is mapped to an RGB value, which is stored as the edge \fI"color"\fp.
+In addition, this scalar value is mapped to an RGB value, which is stored as the edge \fI"color"\fP.
 .TP
 .B \-l
 If set, \fBmm2gv\fP attaches a label to the graph indicating the base name of the input file,
