man page patches from David Claughton <dave@eclecticdave.com>

--- a/cmd/dot/dot.1
+++ b/cmd/dot/dot.1
@@ -1,4 +1,4 @@
-.TH DOT 1 "23 August 2004" \*(eX
+.TH DOT 1 "23 August 2004"
 .SH NAME
 dot \- filter for drawing directed graphs
 .br
@@ -223,7 +223,7 @@ The following sections describe attributes that control graph layout.
 a floating point number, or one of the keywords \fBfill\fP,
 \fBcompress\fP, or \fBauto\fP.
 .PP
-\fBlayout=\fIengine\fR indicates the preferred layout engine ("dot", "neato", fdp" etc) overriding the default from the basename of the command or the -K commandline option.
+\fBlayout=\fIengine\fR indicates the preferred layout engine ("dot", "neato", fdp" etc) overriding the default from the basename of the command or the \-K commandline option.
 .PP
 \fBmargin=\fIf\fR sets the page margin (included in the page size).
 .PP
@@ -639,7 +639,7 @@ As usual, edge layout is guided by the \fBsplines\fR attribute.
 .PP
 \fB\-K\fIlayout\fR override the default layout engine implied by the command name.
 .PP
-\fB\-O\fP automatically generate output filenames based on the input filename and the -T format.
+\fB\-O\fP automatically generate output filenames based on the input filename and the \-T format.
 .PP
 \fB\-P\fP generate a graph of the currently available plugins.
 .PP
