--- a/cmd/dot/osage.1
+++ b/cmd/dot/osage.1
@@ -1,4 +1,4 @@
-.TH OSAGE 1 "27 May 2009" \*(eX
+.TH OSAGE 1 "27 May 2009"
 .SH NAME
 osage \- filter for drawing clustered graphs
 .SH SYNOPSIS
@@ -402,7 +402,7 @@ If \fB\-l\fP is given by itself, the standard library is omitted.
 .PP
 \fB\-T\fIlang\fR sets the output language as described above.
 .PP
-\fB\-O\fP automatically generate output filenames based on the input filename and the -T format.
+\fB\-O\fP automatically generate output filenames based on the input filename and the \-T format.
 .PP
 \fB\-v\fP (verbose) prints various information useful for debugging.
 .PP
