--- a/cmd/lefty/lefty.1
+++ b/cmd/lefty/lefty.1
@@ -73,7 +73,7 @@ warn about expressions that do not return a value. Only level
 .B 1
 messages are real errors. The rest arise from legal
 .B lefty
-statements, but may be cased by some logic errors.
+statements, but may be caused by some logic errors.
 .TP
 .B "-sd <num>"
 Specifies how much of the stack to show, when an error message is to be
