--- a/cmd/tools/sccmap.1
+++ b/cmd/tools/sccmap.1
@@ -1,4 +1,4 @@
-.TH SCCMAP 1 "21 March 2001" \*(eX
+.TH SCCMAP 1 "21 March 2001"
 .SH NAME
 sccmap \- extract strongly connected components of directed graphs
 .SH SYNOPSIS
