--- a/lib/graph/graph.3
+++ b/lib/graph/graph.3
@@ -135,7 +135,7 @@ The attributes of these nodes and edges are set in the usual way (\f5agget\fP,
 \f5agset\fP, etc.) to set defaults.
 .PP
 \f5agread\fP reads a file and returns a new graph if one
-was succesfully parsed, otherwise returns NULL if
+was successfully parsed, otherwise returns NULL if
 \f5EOF\fP or a syntax error was encountered.
 Errors are reported on stderr and a count is returned from
 \g5agerrors()\fP.
