--- a/doc/infosrc/output.2
+++ b/doc/infosrc/output.2
@@ -25,3 +25,5 @@ Externally provided id values are not used internally, and it is the use's repon
 that they are sufficiently unique for their intended downstream use.
 Note, in particular, that "\E" is not a unique id for multiedges.
 </OL>
+</BODY>
+</HTML>
