--- a/doc/infosrc/colors.1
+++ b/doc/infosrc/colors.1
@@ -9,8 +9,14 @@ This is a generated document.  Do not edit.
 <BODY BGCOLOR=#ffffff>
 
 <H1 ALIGN=CENTER>Color Names</H1>
+Color names are resolved in the context of a 
+<A HREF="attrs.html#d:colorscheme">color scheme</A>. Graphviz currently
+supports the <A HREF="#x11">X11 scheme</A>, 
+the <A HREF="#svg">SVG scheme</A>, and the <A HREF="#brewer">Brewer schemes</A>,
+with X11 being the default.
+<P>
 Color names are case-insensitive.
 <P>
-Use of all color schemes below except X11 are covered by this
-<A HREF=#brewer_license>license</A>.
+The Brewer color schemes below are covered by this <A HREF=#brewer_license>license</A>.
 <HR>
+<H2><A NAME="x11">The X11 color scheme</A></H2>
