Fix broken links

--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -170,10 +170,10 @@ or &lt;TD&gt;...&lt;/TD&gt;.
 This color can be 
 overridden by a <B><I>COLOR</I></B> attribute in descendents.
 By default, the font color is determined by the
-<A HREF="attrs.html#:fontcolor">fontcolor</A> attribute of
+<A HREF="attrs.html#d:fontcolor">fontcolor</A> attribute of
 the corresponding node, edge or graph, and the border color
 is determined by the
-<A HREF="attrs.html#:color">color</A> attribute of
+<A HREF="attrs.html#d:color">color</A> attribute of
 the corresponding node, edge or graph.
 </BLOCKQUOTE>
 
@@ -190,7 +190,7 @@ specifies the font to use within the scope of
 This can be 
 overridden by a <B><I>FACE</I></B> attribute in descendents.
 By default, the font name is determined by the
-<A HREF="attrs.html#:fontname">fontname</A> attribute of the corresponding
+<A HREF="attrs.html#d:fontname">fontname</A> attribute of the corresponding
 node, edge or graph.
 </BLOCKQUOTE>
 
@@ -228,7 +228,7 @@ sets the size of the font, in points, used within the scope of
 This can be 
 overridden by a <B><I>POINT-SIZE</I></B> attribute in descendents.
 By default, the font size is determined by the
-<A HREF="attrs.html#:fontsize">fontsize</A> attribute of the corresponding
+<A HREF="attrs.html#d:fontsize">fontsize</A> attribute of the corresponding
 node, edge or graph.
 </BLOCKQUOTE>
 
@@ -270,8 +270,8 @@ scaling being uniform in width and height if <I>SCALE=<TT>"true"</TT></I>.
 <BLOCKQUOTE>
 specifies the image file to be displayed in the cell.
 Note that if the software is used as a web server, file system access
-to images is more restricted. See <A HREF="#d:GV_FILE_PATH">GV_FILE_PATH</A>
-and <A HREF="#d:SERVER_NAME">SERVER_NAME</A>.
+to images is more restricted. See <A HREF="command.html#d:GV_FILE_PATH">GV_FILE_PATH</A>
+and <A HREF="command.html#d:SERVER_NAME">SERVER_NAME</A>.
 </BLOCKQUOTE>
 
 <B><I><FONT SIZE=-1>TARGET="value"</FONT></I></B>
