--- a/doc/infosrc/shapes.2
+++ b/doc/infosrc/shapes.2
@@ -15,10 +15,7 @@ If <TT>shape="polygon"</TT>, the attributes
 <A HREF=attrs.html#d:skew><TT>skew</TT></A> and
 <A HREF=attrs.html#d:distortion><TT>distortion</TT></A> are also used.
 If unset, they default to 4, 0.0 and 0.0, respectively.
-In addition, the 3 M* shapes support auxiliary labels using
-the <A HREF=attrs.html#d:toplabel><TT>toplabel</TT></A> and
-<A HREF=attrs.html#d:bottomlabel><TT>bottomlabel</TT></A> attributes.
-On the other hand, the point shape is special in that it is
+The point shape is special in that it is
 only affected by the <A HREF=attrs.html#d:peripheries><TT>peripheries</TT></A>, 
 <A HREF=attrs.html#d:width><TT>width</TT></A> and
 <A HREF=attrs.html#d:height><TT>height</TT></A> attributes.
@@ -162,7 +159,7 @@ to produce the figure<BR>
 which is the default.
 <DT><A NAME=d:bold><TT>bold</TT>
   <DD>This style causes the node's border to be drawn as a bold line.
-See also <A HREF=attrs.html#d:setlinewidth>setlinewidth</A>.
+See also <A HREF=attrs.html#d:penwidth>penwidth</A>.
 
 </DL>
 
