Fix typo in man page

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -813,7 +813,7 @@ to exit with the exit code
 \fBsystem\fP(\fIcmd\fP : \fBstring\fP) : \fBint\fP
 provides the standard C function
 .IR system (3).
-It executes \fIcmd\fP if the user's shell environment, and
+It executes \fIcmd\fP in the user's shell environment, and
 returns the exit status of the shell.
 .TP
 \fBrand\fP() : \fBdouble\fP
