--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -806,7 +806,7 @@ returns the number of elements in the array \fIarr\fP.
 returns 1 if a value has been set for index \fIidx\fP in the array \fIarr\fP.
 It returns 0 otherwise.
 .TP
-\fBunset\fP(\fIv\fP : \fBarray\fP, \Iidx\P) : \fBint\fP
+\fBunset\fP(\fIv\fP : \fBarray\fP, \fIidx\fP) : \fBint\fP
 removes the item indexed by \fIidx\fP. It returns 1 if the item existed, 0 otherwise.
 .TP
 \fBunset\fP(\fIv\fP : \fBarray\fP) : \fBvoid\fP
