Add smyrna manual to cvs

--- a/doc/dotguide/graphdraw.bib
+++ b/doc/dotguide/graphdraw.bib
@@ -237,7 +237,7 @@
 	publisher = "World Scientific"}
 
 @techreport {kn:dotguide,
-	author = "Eleftherios Koutsofios and Stephen C. North",
+	author = "Emden R. Gansner and Eleftherios Koutsofios and Stephen C. North",
 	title = "{Drawing graphs with dot}",
 	institution="AT\&T Bell Laboratories",
 	address="Murray Hill, NJ",
@@ -371,4 +371,12 @@
 	publisher="Addison-Wesley",
 	isbn="0-201-54275-7"
 	}
+@article{topfish,
+  author =   {E. R. Gansner and Y. Koren and S. North},
+  title =    {Topological fisheye views for visualizing large graphs},
+  journal =      {IEEE Transactions on Visualization and Computer Graphics},
+  year =     {2005},
+  volume =   {11},
+  pages =    {457-468}
+}
 
