Fix bug in color conversion; remove CMYK allow color types as we don't have a unique string format.

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -839,7 +839,7 @@ value is returned. \fBsrand\fP should be called before any calls to
 \fBcolorx\fP(\fIcolor\fP : \fBstring\fP, \fIfmt\fP : \fBstring\fP) : \fBstring\fP
 translates a color from one format to another. The \fIcolor\fP argument should be
 a color in one of the recognized string representations. The \fIfmt\fP value should
-be one of "RGB", "RGBA", "HSV", "HSVA", or "CMYK".
+be one of "RGB", "RGBA", "HSV", or "HSVA".
 An empty string is returned on error.
 .SH "BUILT\(hyIN VARIABLES"
 .PP
