Update documentation to note <B>, <I> and <U> elements.

--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -88,6 +88,21 @@ Attribute values must appear in double quotes.
   SRC="<I>value</I>"
 &gt;
 </PRE>
+<P>
+<PRE>&lt;I
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
+<P>
+<PRE>&lt;B
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
+<P>
+<PRE>&lt;U
+  &lt;!-- No attributes --&gt;
+&gt;
+</PRE>
 
 <P>
 <B><I><FONT SIZE=-1>ALIGN</FONT> </I></B>
