Remove most references to .dot from files under cmd

--- a/cmd/dot/dot.1
+++ b/cmd/dot/dot.1
@@ -169,7 +169,7 @@ The first plugin listed is always the default.
 .P
 The \fB\-P\fP switch can be used to produce a graph of all output variants supported by plugins in the local installation of graphviz.
 .SH GRAPH FILE LANGUAGE
-Here is a synopsis of the graph file language, traditionally using the extension \fB.dot\fR, for graphs:
+Here is a synopsis of the graph file language, normally using the extension \fB.gv\fR, for graphs:
 .PP
 [\fBstrict\fR] (\fBgraph\fR|\fBdigraph\fR) \fIname\fP { \fIstatement\(hylist\fP }\fR
 .br 
