--- a/cmd/dot/osage.1
+++ b/cmd/dot/osage.1
@@ -60,7 +60,7 @@ Alternative plugins providing support for a given output format
 can be found from the error message resulting from appending a ':' to the format. e.g. \fB-Tpng:\fP
 The first plugin listed is always the default.
 .SH GRAPH FILE LANGUAGE
-Here is a synopsis of the graph file language, traditionally using the extension \fB.gv\fR or \fB.dot\fR, for graphs:
+Here is a synopsis of the graph file language, normally using the extension \fB.gv\fR, for graphs:
 .PP
 [\fBstrict\fR] (\fBgraph\fR|\fBdigraph\fR) \fIname\fP { \fIstatement\(hylist\fP }\fR
 .br 
