--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -998,7 +998,7 @@ for the role of \fB$tvroot\fP.
 .ta \w'\f(CWdelete array[expression]'u
 .RS
 .nf
-\fBgvpr \-i 'N[color=="blue"]' file.dot\fP
+\fBgvpr \-i 'N[color=="blue"]' file.gv\fP
 .fi
 .RE
 .DT
@@ -1008,7 +1008,7 @@ Generate the node\(hyinduced subgraph of all nodes with color blue.
 .ta \w'\f(CWdelete array[expression]'u
 .RS
 .nf
-\fBgvpr \-c 'N[color=="blue"]{color = "red"}' file.dot\fP
+\fBgvpr \-c 'N[color=="blue"]{color = "red"}' file.gv\fP
 .fi
 .RE
 .DT
