--- a/cmd/tools/gvcolor.1
+++ b/cmd/tools/gvcolor.1
@@ -12,7 +12,7 @@ gvcolor \- flow colors through a ranked digraph
 ]
 .SH "USAGE"
 .ft 5
-dot file.dot | gvcolor | dot \-T\fI<format>\fP
+dot file.gv | gvcolor | dot \-T\fI<format>\fP
 .ft
 .SH DESCRIPTION
 .B gvcolor
