--- a/cmd/tools/gxl2gv.1
+++ b/cmd/tools/gxl2gv.1
@@ -30,7 +30,7 @@ GV language. Unless a conversion type is specified using
 a flag,
 .B gxl2gv
 will deduce the type of conversion from the suffix of
-the input file, a ".gv" (or a ".dot") suffix causing a conversion from GV
+the input file, a ".gv" suffix causing a conversion from GV
 to GXL, and a ".gxl" suffix causing a conversion from GXL to GV.
 If no suffix is available, e.g. when the input is from a pipe,
 and no flags are used then
