Remove remnants of .dot from plugin

--- a/plugin/xlib/vimdot.1
+++ b/plugin/xlib/vimdot.1
@@ -11,7 +11,7 @@ vimdot \- Combined text editor and dot viewer
 dot output of the edited file.  The dot output window automatically refreshes everytime the file is saved
 in the editor.
 .PP
-If no filename is given, vimdot will use 'noname.dot' and initialise it with an example graph to get you
+If no filename is given, vimdot will use 'noname.gv' and initialise it with an example graph to get you
 started.
 .PP
 The GUI window (provided by "dot -Txlib") supports zooming using the mouse scroll-wheel, and panning by holding the scroll-wheel down and dragging.
