--- a/doc/dotty/section1.tex
+++ b/doc/dotty/section1.tex
@@ -30,7 +30,7 @@ explicitly.
 As an example, the user can start up {\DOTTY} and select \verb+load graph+ from
 the menu. Figure~\ref{figdotty1}a shows the \verb+DOTTY+ window and the dialog
 window that asks for the graph file name. In this example, the user asks for
-file \verb+d.dot+. Figure~\ref{figdotty1}b shows the result of the \verb+load
+file \verb+d.gv+. Figure~\ref{figdotty1}b shows the result of the \verb+load
 graph+ action.
 
 \begin{figure}[htb]
