--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -234,6 +234,9 @@ The maximum value is 65535.
 <B><I><FONT SIZE=-1>HREF="value"</FONT></I></B>
 <BLOCKQUOTE>
 attaches a URL to the object.
+Note that the <TT>"value"</TT> is treated as an
+<A HREF=attrs.html#k:escString>escString</A> similarly to the
+<A HREF=attrs.html#d:URL>URL</A> attribute.
 </BLOCKQUOTE>
 
 <B><I><FONT SIZE=-1>POINT-SIZE="value"</FONT></I></B>
@@ -297,12 +300,18 @@ and <A HREF="command.html#d:SERVER_NAME">SERVER_NAME</A>.
 determines which window of the browser is used for the URL if the object 
 has one. 
 See <A HREF="http://www.w3.org/TR/html401/present/frames.html#adef-target">W3C documentation</A>.
+Note that the <TT>"value"</TT> is treated as an
+<A HREF=attrs.html#k:escString>escString</A> similarly to the
+<A HREF=attrs.html#d:target>target</A> attribute.
 </BLOCKQUOTE>
 
 <B><I><FONT SIZE=-1>TITLE="value"</FONT></I></B>
 <BLOCKQUOTE>
 sets the tooltip annotation attached to the element. 
 This is used only if the element has a HREF attribute.
+Note that the <TT>"value"</TT> is treated as an
+<A HREF=attrs.html#k:escString>escString</A> similarly to the
+<A HREF=attrs.html#d:tooltip>tooltip</A> attribute.
 </BLOCKQUOTE>
 
 <B><I><FONT SIZE=-1>TOOLTIP="value"</FONT></I></B>
