Update documentation to reflect changes to the id attribute, and its support now in html-like labels.

--- a/doc/infosrc/html.2
+++ b/doc/infosrc/html.2
@@ -32,6 +32,7 @@ Attribute values must appear in double quotes.
   FIXEDSIZE="FALSE|TRUE"
   HEIGHT="<I>value</I>"
   HREF="<I>value</I>"
+  ID="<I>value</I>"
   PORT="<I>portName</I>"
   TARGET="<I>value</I>"
   TITLE="<I>value</I>"
@@ -58,6 +59,7 @@ Attribute values must appear in double quotes.
   FIXEDSIZE="FALSE|TRUE"
   HEIGHT="<I>value</I>"
   HREF="<I>value</I>"
+  ID="<I>value</I>"
   PORT="<I>portName</I>"
   ROWSPAN="<I>value</I>"
   TARGET="<I>value</I>"
@@ -237,6 +239,15 @@ attaches a URL to the object.
 Note that the <TT>"value"</TT> is treated as an
 <A HREF=attrs.html#k:escString>escString</A> similarly to the
 <A HREF=attrs.html#d:URL>URL</A> attribute.
+</BLOCKQUOTE>
+
+<B><I><FONT SIZE=-1>ID="value"</FONT></I></B>
+<BLOCKQUOTE>
+allows the user to specify a unique ID for a table or cell. See
+the <A HREF=attrs.html#d:id>id</A> attribute for more information.
+Note that the <TT>"value"</TT> is treated as an
+<A HREF=attrs.html#k:escString>escString</A> similarly to the
+<A HREF=attrs.html#d:id>id</A> attribute.
 </BLOCKQUOTE>
 
 <B><I><FONT SIZE=-1>POINT-SIZE="value"</FONT></I></B>
