Add note that Graphviz is not thread-safe.

--- a/doc/libguide/intro.tex
+++ b/doc/libguide/intro.tex
@@ -303,3 +303,4 @@ Section~\ref{sec:unconnect}
 discusses an auxiliary library for dealing with graphs containing
 multiple connected components.
 
+{\bf N.B. Using \gviz\ as a library is not thread-safe.}
